--- a/Farmaluxa/app/src/main/AndroidManifest.xml
+++ b/Farmaluxa/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mx.farmaluxa.login">
 
+    <queries><package android:name="com.whatsapp"/></queries>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
