--- a/Farmaluxa/app/build.gradle
+++ b/Farmaluxa/app/build.gradle
@@ -38,5 +38,5 @@ android {
 
 dependencies {
     implementation project("::sharedutil")
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation project(":warehouse")
 }
