--- a/Farmaluxa/sharedutil/build.gradle
+++ b/Farmaluxa/sharedutil/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     api 'androidx.core:core-ktx:1.7.0'
     api 'androidx.appcompat:appcompat:1.4.1'
     api 'com.google.android.material:material:1.5.0'
+    api 'androidx.legacy:legacy-support-v4:1.0.0'
+    api 'androidx.constraintlayout:constraintlayout:2.1.3'
 
     //Retrofit
     api 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -47,6 +49,17 @@ dependencies {
 
     //Coroutine
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+
+    // ViewModels
+    api "androidx.fragment:fragment-ktx:1.4.1"
+
+    //RecyclerView
+    api 'androidx.recyclerview:recyclerview:1.2.1'
+    api 'androidx.cardview:cardview:1.0.0'
+
+    // Navigation
+    api 'androidx.navigation:navigation-fragment-ktx:2.4.1'
+    api 'androidx.navigation:navigation-ui-ktx:2.4.1'
 
     testImplementation 'junit:junit:4.13.2'
     api 'androidx.test.ext:junit:1.1.3'
