--- a/Farmaluxa/warehouse/src/main/AndroidManifest.xml
+++ b/Farmaluxa/warehouse/src/main/AndroidManifest.xml
@@ -2,4 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mx.farmaluxa.warehouse">
 
+    <application>
+        <activity
+            android:name=".ui.view.WarehouseActivity"
+            android:exported="false" />
+    </application>
+
 </manifest>
