Se agrega la logica del login

--- a/Farmaluxa/app/build.gradle
+++ b/Farmaluxa/app/build.gradle
@@ -37,6 +37,6 @@ android {
 }
 
 dependencies {
-    implementation project("::sharedutil")
-    implementation project(":warehouse")
+    implementation project(path: '::sharedutil')
+    implementation project(path: ':warehouse')
 }
