--- a/Farmaluxa/sharedutil/build.gradle
+++ b/Farmaluxa/sharedutil/build.gradle
@@ -61,6 +61,9 @@ dependencies {
     api 'androidx.navigation:navigation-fragment-ktx:2.4.1'
     api 'androidx.navigation:navigation-ui-ktx:2.4.1'
 
+    // GLIDE
+    api 'com.github.bumptech.glide:glide:4.13.0'
+
     testImplementation 'junit:junit:4.13.2'
     api 'androidx.test.ext:junit:1.1.3'
     api 'androidx.test.espresso:espresso-core:3.4.0'
