Servicio de login

--- a/Farmaluxa/app/src/main/AndroidManifest.xml
+++ b/Farmaluxa/app/src/main/AndroidManifest.xml
@@ -2,7 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mx.farmaluxa.login">
 
-    <queries><package android:name="com.whatsapp"/></queries>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <queries>
+        <package android:name="com.whatsapp" />
+    </queries>
 
     <application
         android:allowBackup="true"
@@ -10,7 +15,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Farmaluxa">
+        android:theme="@style/Theme.Farmaluxa"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".ui.view.MainActivity"
             android:exported="true">
