Se agrega vista Agregar Producto

--- a/Farmaluxa/warehouse/src/main/AndroidManifest.xml
+++ b/Farmaluxa/warehouse/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <application>
         <activity
             android:name=".ui.view.WarehouseActivity"
+            android:theme="@style/Theme.Farmaluxa"
             android:exported="false" />
     </application>
 
