--- a/Farmaluxa/warehouse/build.gradle
+++ b/Farmaluxa/warehouse/build.gradle
@@ -37,4 +37,5 @@ android {
 
 dependencies {
     implementation project(path: '::sharedutil')
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
