Implementacion Vista Filtrado de Operaciones

--- a/Farmaluxa/warehouse/src/main/AndroidManifest.xml
+++ b/Farmaluxa/warehouse/src/main/AndroidManifest.xml
@@ -2,11 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mx.farmaluxa.warehouse">
 
-    <application>
+    <application
+        android:theme="@style/Theme.Farmaluxa">
         <activity
             android:name=".ui.view.WarehouseActivity"
-            android:theme="@style/Theme.Farmaluxa"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize"/>
     </application>
 
 </manifest>
