--- a/Farmaluxa/sharedutil/build.gradle
+++ b/Farmaluxa/sharedutil/build.gradle
@@ -45,10 +45,10 @@ dependencies {
     //Retrofit
     api 'com.squareup.retrofit2:retrofit:2.9.0'
     api 'com.squareup.retrofit2:converter-gson:2.9.0'
-    api 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.4'
+    api 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.6'
 
     //Coroutine
-    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
 
     // ViewModels
     api "androidx.fragment:fragment-ktx:1.4.1"
@@ -58,11 +58,12 @@ dependencies {
     api 'androidx.cardview:cardview:1.0.0'
 
     // Navigation
-    api 'androidx.navigation:navigation-fragment-ktx:2.4.1'
-    api 'androidx.navigation:navigation-ui-ktx:2.4.1'
+    api 'androidx.legacy:legacy-support-v4:1.0.0'
+    api 'androidx.navigation:navigation-fragment-ktx:2.4.2'
+    api 'androidx.navigation:navigation-ui-ktx:2.4.2'
 
     // GLIDE
-    api 'com.github.bumptech.glide:glide:4.13.0'
+    api 'com.github.bumptech.glide:glide:4.13.1'
 
     testImplementation 'junit:junit:4.13.2'
     api 'androidx.test.ext:junit:1.1.3'
